--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href = "nba.css">
 
 </head>
+
 <body>
-    ***More Content coming Soon***
+
+    <div class = "title">
+
+        <h1> NBAComparison </h1>
+        
+    </div>
+    
 </body>
 </html>
