--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <title> Software Engineering Final Project</title>
 
-    <link rel="stylesheet" href = "nba.css">
+    <link rel="stylesheet" href = "NBA.css">
 
 </head>
 
