--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     </div>
 
-    <ul>
+    <ul style= "text-align: center;">
 
         <li>Points</li>
         <li>Rebounds</li>
@@ -33,8 +33,15 @@
         <li>Steals</li>
         <li>Blocks</li>
 
-
     </ul>  
+
+    <p style= "text-align: center;">
+
+        In this comparison, the player with the higher stat 
+        will have their box be highlighted green. This while indicate who 
+        is better in what category.
+
+    </p>
     
 </body>
 </html>
