--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
         
     </div>
 
-    <ul style= "text-align: center;">
-
-        <li>Points</li>
-        <li>Rebounds</li>
-        <li>Assists</li>
-        <li>Steals</li>
-        <li>Blocks</li>
-
-    </ul>  
+    <p style= "text-align: center;"> Points</p> 
+    <p style= "text-align: center;"> Rebounds</p>
+    <p style= "text-align: center;"> Assists</p>
+    <p style= "text-align: center;"> Steals</p>
+    <p style= "text-align: center;"> Blocks</p>
 
     <p style= "text-align: center;">
 
