--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class = "title">
 
-        <h1 style= "text-align: center;"> Welcome to NBAComparison! </h1>
+        <h1 style= "text-align: center;"> <i> Welcome to NBAComparison! </i> </h1>
 
         <h2 style= "text-align: center;">  
         
