--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </p>
 
-    <p><b> Please select a player from the selection list below: </b></p>
+    <p style= "text-align: center;"><b> Please select a player from the selection list below: </b></p>
     
     
 </body>
