Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 
       -->    
 
-   <p>
-        Player 1:
+      <p><b> Player 1: </b></p>
+   
+      <p>
+        
         <select onclick="getPlayer()" id="Player1">
 
             <!-- Milwaukee Bucks -->
