Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    
     <div class= "firstPlayerSelection">
 
-        <p style= "text-align:left;">
+        <p style= "text-align:center;">
             <select onclick="getPlayer()" id="Player1">
 
                 <!-- Milwaukee Bucks -->
