Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 
       -->    
 
-    <p><b> Player 1: </b></p>
+      <b> Player 1: </b>
+    
+      <p style= "text-align:left;"><b> Player 2: </b></p>
    
     <div class= "firstPlayerSelection">
 
-        <p style= "text-align:center;">
+        <p style= "text-align:left;">
             <select onclick="getPlayer()" id="Player1">
 
                 <!-- Milwaukee Bucks -->
