--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
     <div class= "firstPlayerSelection">
 
-        <p style= "text-align:right;"><b> Player 1: </b></p>
+        <p style= "text-align:left;"><b> Player 1: </b></p>
 
         <p style= "text-align:left;">
             <select onclick="getPlayer()" id="Player1">
