Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <p style= "text-align:right;"><b> Player 2: </b></p>
 
         <p style= "text-align:right;">
-            <select onclick="getPlayer()" id="Player2">
+            <select onclick="getPlayer2()" id="Player2">
 
                 <!-- Milwaukee Bucks -->
                 <option value="Jrue_Holiday">Jrue Holiday</option>
