Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         function getPlayer2(){
 
             selectElement = document.querySelector('#Player2');
-            output = selectElement.value;
+            output2 = selectElement.value;
 
             document.querySelector('.output2').textContent = output2;
         }
