Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
         <h1 style= "text-align: center;"> <i> Welcome to NBAComparison! </i> </h1>
 
+        <!-- We are importing functions from playerdata here-->
+        <script src="PlayerData.js"></script>
+
         <h2 style= "text-align: center;">  
         
             With this application, you will be able to compare current 
@@ -497,10 +500,10 @@
 
     <p>
 
-    The value of player 1 is:
+    The Points Per Game of Player 1:
     <span class="output"></span>
 
-    The value of player 2 is:
+    The Points Per Game of Player 2 is:
     <span class="output2"></span>
 
     </p>
@@ -526,6 +529,35 @@
         
 
     </script>
+
+    <table>
+        <tr>
+            <th>Statistic Category</th>
+
+            <th></th>
+
+        </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </table>
 
   
 
