Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <div class= "secondPlayerSelection">
 
-        <p style= "text-align:right;"><b> Player 2: </b></p>
+        <p style= "text-align:left;"><b> Player 2: </b></p>
 
         <p style= "text-align:right;">
             <select onclick="getPlayer2()" id="Player2">
@@ -505,7 +505,7 @@
         </p>
 
         <p>
-            
+
         </p>
 
     <p>
