Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -510,13 +510,13 @@
 
     <p>
 
-    The Points Per Game of Player 1:
+    <p>The Points Per Game of Player 1:</p>
     <span class="output"></span>
 
         <p>
         </p>
 
-    The Points Per Game of Player 2:
+    <p>The Points Per Game of Player 2:</p>
     <span class="output2"></span>
 
     </p>
