Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
             <select onclick="getPlayer2()" id="Player2">
 
                 <!-- Milwaukee Bucks -->
-                <option value="Jrue_Holiday">Jrue Holiday</option>
-                <option value="Donte_DiVincenzo">Donte DiVincenzo</option>
+                <option value="Jrue Holiday: 15.9">Jrue Holiday</option>
+                <option value="Donte DiVincenzo: 8.0">Donte DiVincenzo</option>
                 <option value="Khris_Middleton">Khris Middleton</option>
                 <option value="Giannis_Antetokounmpo">Giannis Antetokounmpo</option>
                 <option value="Brook_Lopez">Brook Lopez</option>
