Added Dropdown List

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 style= "text-align: center;">  
         
             With this application, you will be able to compare current 
-            ***STARTING*** NBA players, based their current Career Regular Season Points-Per-Game
+            ***STARTING*** NBA players, based on their current Career Regular Season Points-Per-Game
         
         </h2>
 
